# 3DVehicleDynamicsStateEstimation

./: .gitignore  README.md
config/: ssa_estimation_ukf_config.yml  state_estimation_cpp_2d_ekf_config.yml  state_estimation_cpp_3d_ekf_config.yml
dependencies/msgs/: CMakeLists.txt  package.xml
dependencies/msgs/msg/: SteeringReport.msg  TUMDebugSignalNames.msg  TUMDebugValues.msg  TUMFloat64PerWheel.msg  TUMFloat64PerWheelStamped.msg
dependencies/param_manager_cpp/: CMakeLists.txt  package.xml
dependencies/param_manager_cpp/include/param_manager_cpp/: param_manager.hpp  param_manager_base.hpp  param_manager_composer.hpp  param_manager_non_owning.hpp
dependencies/param_manager_cpp/src/: param_manager.cpp  param_manager_composer.cpp  param_manager_non_owning.cpp
dependencies/robot_state_publisher/: CHANGELOG.rst  package.xml
dependencies/ros2_watchdog_cpp/: CMakeLists.txt  package.xml
dependencies/ros2_watchdog_cpp/include/ros2_watchdog_cpp/: topic_watchdog.hpp
dependencies/ros2_watchdog_cpp/src/: topic_watchdog.cpp
dependencies/ros_debug_helpers_cpp/: CMakeLists.txt  package.xml
dependencies/ros_debug_helpers_cpp/include/ros_debug_helpers_cpp/: debug_publisher.hpp
dependencies/ros_debug_helpers_cpp/src/: debug_publisher.cpp
dependencies/ros_param_helpers_cpp/: CMakeLists.txt  package.xml
dependencies/ros_param_helpers_cpp/include/ros_param_helpers_cpp/: helper_functions.hpp
dependencies/ros_param_helpers_cpp/src/: helper_functions.cpp
dependencies/tum_helpers_cpp/: CMakeLists.txt  package.xml
dependencies/tum_helpers_cpp/include/tum_helpers_cpp/: common.hpp  constants.hpp  containers.hpp  numerical.hpp  rotations.hpp  type_conversion.hpp
dependencies/tum_helpers_cpp/include/tum_helpers_cpp/geometry/: geometry.hpp
dependencies/tum_type_conversions_ros_cpp/: CMakeLists.txt  package.xml
dependencies/tum_type_conversions_ros_cpp/include/tum_type_conversions_ros_cpp/: orientation.hpp  tum_type_conversions.hpp
dependencies/tum_type_conversions_ros_cpp/src/: orientation.cpp  tum_type_conversions.cpp
dependencies/tum_type_conversions_ros_cpp/test/: orientation_tests.cpp
dependencies/tum_types_cpp/: CMakeLists.txt  package.xml
dependencies/tum_types_cpp/include/tum_types_cpp/: common.hpp  control.hpp  data_per_wheel.hpp
docker/: Dockerfile  build_docker.sh  compose-file.yml
lib_cpp/base/classical_filter/: CMakeLists.txt  package.xml
lib_cpp/base/classical_filter/include/classical_filter/: fir.hpp  fir_impl.hpp
lib_cpp/base/imu_handler/: CMakeLists.txt  package.xml
lib_cpp/base/imu_handler/include/imu_handler/: imu_handler.hpp  imu_handler_impl.hpp
lib_cpp/base/ssa_estimation_base/: CMakeLists.txt  package.xml
lib_cpp/base/ssa_estimation_base/include/ssa_estimation_base/: ssa_estimation_base.hpp
lib_cpp/base/state_estimation_base/: CMakeLists.txt  package.xml
lib_cpp/base/state_estimation_base/include/state_estimation_base/: state_estimation_base.hpp
lib_cpp/constants/ssa_estimation_constants/: CMakeLists.txt  package.xml
lib_cpp/constants/ssa_estimation_constants/include/ssa_estimation_constants/: UKF_STM.hpp
lib_cpp/constants/state_estimation_constants/: CMakeLists.txt  package.xml
lib_cpp/constants/state_estimation_constants/include/state_estimation_constants/: EKF_2D.hpp  EKF_3D.hpp  KF_BASE.hpp
lib_cpp/ssa_estimation_cpp/: CMakeLists.txt  README.md  package.xml
lib_cpp/ssa_estimation_cpp/include/ssa_estimation_cpp/: ssa_estimation.hpp  ssa_estimation_impl.hpp
lib_cpp/ssa_estimation_cpp/include/ssa_estimation_cpp/submodules/: state_machine.hpp  state_machine_impl.hpp  ukf.hpp  ukf_impl.hpp
lib_cpp/ssa_estimation_cpp/test/: unit_test_runtime.cpp
lib_cpp/state_estimation_cpp/: CMakeLists.txt  README.md  package.xml
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/: state_estimation.hpp  state_estimation_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/filter/helper/: outlier_detection.hpp  outlier_detection_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/filter/kalman_filter/: ekf.hpp  ekf_impl.hpp  kalman_filter_base.hpp  kalman_filter_base_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/submodules/: ref_orientation_handler.hpp  ref_orientation_handler_impl.hpp  state_machine.hpp  state_machine_impl.hpp  vehicle_model_handler.hpp  vehicle_model_handler_impl.hpp
lib_cpp/state_estimation_cpp/test/: unit_test_runtime.cpp  unit_test_state_machine.cpp
packages_cpp/ssa_estimation_node_cpp/: CMakeLists.txt  README.md  package.xml
packages_cpp/ssa_estimation_node_cpp/include/ssa_estimation_node_cpp/: ssa_estimation_node.hpp  ssa_estimation_node_impl.hpp
packages_cpp/ssa_estimation_node_cpp/src/: ssa_estimation_node_main.cpp
packages_cpp/state_estimation_node_cpp/: CMakeLists.txt  README.md  package.xml
packages_cpp/state_estimation_node_cpp/include/state_estimation_node_cpp/: state_estimation_node.hpp  state_estimation_node_impl.hpp
packages_cpp/state_estimation_node_cpp/src/: CMakeLists.txt
packages_cpp/state_estimation_node_cpp/src/cpp/kinematic/: state_estimation_node_cpp_ekf_2d_main.cpp  state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_estimation_node_cpp/src/cpp/non_holonomic/: state_estimation_node_cpp_ekf_2d_main.cpp  state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_estimation_node_cpp/src/cpp/single_track_model/: state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_publisher/: CMakeLists.txt  README.md  package.xml
packages_cpp/state_publisher/launch/: state_publisher.py
packages_cpp/state_publisher/urdf/: urdf.xml
vegas24_pub/: metadata.yaml
