<?xml version="1.0"?>
<package format="3">
  <name>param_manager_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simon.sagmeister@tum.de">simon</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
