<?xml version="1.0"?>
<package format="3">
  <name>ros2_watchdog_cpp</name>
  <version>0.0.0</version>
  <description>Topic Watchdog for ROS2 topics</description>
  <maintainer email="simon.hoffmann@tum.de">simon</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>msgs</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>tum_types_cpp</depend>
  <depend>tum_type_conversions_ros_cpp</depend>
  <depend>ros_param_helpers_cpp</depend>
  <depend>param_manager_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
