<?xml version="1.0"?>
<package format="3">
  <name>tum_type_conversions_ros_cpp</name>
  <version>0.0.0</version>
  <description>custom type conversions</description>
  <maintainer email="phillip.pitschi@tum.de">phillip</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>tum_types_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>