<?xml version="1.0"?>
<package format="3">
  <name>state_estimation_cpp</name>
  <version>0.0.1</version>
  <description>state estimation cpp class</description>
  <maintainer email="marcel.weinmann@tum.de">Marcel Weinmann</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>param_manager_cpp</depend>
  <depend>tum_types_cpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>tum_type_conversions_ros_cpp</depend>
  <depend>state_estimation_constants</depend>
  <depend>state_estimation_base</depend>
  <depend>imu_handler</depend>
  <depend>classical_filter</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>