<?xml version="1.0"?>
<package format="3">
  <name>state_publisher</name>
  <version>0.0.0</version>
  <description>state publisher</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
